--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ tracing-subscriber = "0.3.18"
 url = "2.5.0"
 tower-http = { version = "0.5.2", features = ["trace"] }
 tracing = "0.1.40"
+chrono = "0.4.37"
